--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
     </head>
     <body>
         <div id="app" class="container">
-            <div class="row">
-                
+            <header>
+                <img src="https://www.boolean.careers/images/misc/logo.png" alt="Logo Boolean">
+            </header>
+
+            <div class="newToDo">
+                <input type="text" placeholder="New Todo">
+                <button type="button" name="button">Aggiungi</button>
+            </div>
+
+            <div class="toDos">
+                <ul>
+                    <li class="todo">test1 <i class="fas fa-times"></i></li>
+
+                </ul>
             </div>
         </div>
     </body>
