--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
             <div class="toDos">
                 <ul>
-                    <li class="todo">test1 <i class="fas fa-times"></i></li>
-
+                    <li class="todo">test1 <i class="fas fa-times pointer"></i></li>
                 </ul>
             </div>
         </div>
