generazione automatica li

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="toDos">
                 <ul>
-                    <li class="todo">test1 <i class="fas fa-times pointer"></i></li>
+                    <li class="todo" v-for=" i in toDos">{{i}} <i class="fas fa-times pointer"></i></li>
                 </ul>
             </div>
         </div>
