--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
 
             <div class="toDos">
-                <ul>
+                <h2 v-if="todos.length==0">No "todo" in the list</h2>
+                <ul v-else>
                     <li class="todo" v-for="(contInd, ind) in todos">{{contInd}}<i @click="removeTodo(ind)" class="fas fa-times pointer"></i></li>
                 </ul>
             </div>
